--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: The Geektarist
 email: contact@pi3rral.com
 description: >- # this means to ignore newlines until "baseurl:"
   Geek and Guitarist
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wwww.pi3rral.com" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  Pi3rral
