--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  Pi3rral
 theme: jekyll-theme-midnight
 plugins:
   - jekyll-feed
+  - jekyll-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
