keep only config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,8 @@ github_username:  Pi3rral
 
 # Build settings
 theme: jekyll-theme-midnight
-plugins:
-  - jekyll-feed
-  - jekyll-theme
+#plugins:
+#  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
